Closed Bug 879033 Opened 13 years ago Closed 13 years ago

JsMath: under Solaris platform, ecmaAtan2 uses undefined macro MOZ_DOUBLE_IS_NEGZERO

Categories

(Core :: JavaScript Engine, defect)

All
Solaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: bbouvier, Assigned: bbouvier)

Details

Attachments

(1 file)

This macro should be replaced by IsNegativeZero().
Attached patch proposed fixSplinter Review
Attachment #757667 - Flags: review?(jimb)
Attachment #757667 - Flags: review?(jimb) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: