Bug 879033 - Replace MOZ_DOUBLE_IS_NEGZERO by IsNegativeZero on Solaris. r=jimb